--- a/first.html
+++ b/first.html
@@ -1,33 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Soumyadeep Dutta</title>
-</head>
-<body>
-    <div class="center">
-          <img src="./display.jpg" alt="Avatar">
-        <h1>Hi, I'm Som</h1>
-        <h3>Software Developer & Creator</h3>
-        <a href="https://twitter.com/somstwt?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Twitter</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="stylesheet" href="./style.css" />
+      <title>Soumyadeep Dutta</title>
+   </head>
+   <body>
+      <section class="center" id="main">
+         <img src="./display.jpg" alt="Avatar" />
+         <div class="typewriter">
+            <h1>Hi, I'm Som</h1>
+         </div>
+         <h3>Software Developer & Creator</h3>
+         <a
+            href="https://twitter.com/somstwt?ref_src=twsrc%5Etfw"
+            class="twitter-follow-button"
+            data-show-count="false"
+            >Twitter</a
+         >
+         <script
+            async
+            src="https://platform.twitter.com/widgets.js"
+            charset="utf-8"
+            class="tweet-button"
+         ></script>
+      </section>
 
-        
-        </div>
+      <section class="down info-section">
+         <h2>About</h2>
+         <p>
+            Self-taught developer from India, every day striving to create
+            amazing solutions to good problems. I specialize in Back-End
+            development, but any activity requiring problem-solving and creative
+            thinking is where you will find me. I am also the founder of CodeOn
+            Community which has 100+ amazing people working, learning and
+            sharing together. Currently exploring for developer roles and
+            working on few personal projects.
+         </p>
+      </section>
 
-    <div class="down">
-    <h2>About</h2>
-        <p>Self-taught developer from India, every day striving to create amazing solutions to good problems. I specialize in Back-End development, but any activity requiring problem-solving and creative thinking is where you will find me. I am also the founder of CodeOn Community which has 100+ amazing people working, learning and sharing together.
-            Currently exploring for developer roles and working on few personal projects.</p>
-
-            </div>
-
-                <div>
-                    <h2> Work </h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem officia molestias ut rem repellendus quae quia, laudantium unde ea nulla facilis provident atque perspiciatis commodi labore eligendi, omnis modi quaerat?</p>
-                </div>
-</body>
+      <section class="info-section">
+         <h2>Work</h2>
+         <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
+            officia molestias ut rem repellendus quae quia, laudantium unde ea
+            nulla facilis provident atque perspiciatis commodi labore eligendi,
+            omnis modi quaerat?
+         </p>
+      </section>
+   </body>
 </html>
-
