--- a/first.html
+++ b/first.html
@@ -14,18 +14,23 @@
             <h1>Hi, I'm Som</h1>
          </div>
          <h3>Software Developer & Creator</h3>
-         <a
+         <!-- <a
             href="https://twitter.com/somstwt?ref_src=twsrc%5Etfw"
             class="twitter-follow-button"
             data-show-count="false"
-            >Twitter</a
-         >
+            >Twitter</a>
          <script
             async
             src="https://platform.twitter.com/widgets.js"
             charset="utf-8"
             class="tweet-button"
-         ></script>
+         ></script> -->
+
+         <a href="https://twitter.com/somstwt"> <img src="icon2.png"></a
+            >
+            <a href="https://github.com/soumdatta81"> <img src="icon1.png"></a
+               >
+         
       </section>
 
       <section class="down info-section">
@@ -36,13 +41,13 @@
             development, but any activity requiring problem-solving and creative
             thinking is where you will find me. I am also the founder of CodeOn
             Community which has 100+ amazing people working, learning and
-            sharing together. Currently exploring for developer roles and
+            sharing together. Currently exploring for internships and
             working on few personal projects.
          </p>
       </section>
 
       <section class="info-section">
-         <h2>Work</h2>
+         <h2>Projects</h2>
          <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
             officia molestias ut rem repellendus quae quia, laudantium unde ea
@@ -50,5 +55,18 @@
             omnis modi quaerat?
          </p>
       </section>
+      <section class="info-section">
+         <h2>Contact Me</h2>
+         <p>
+            Feel free to reach out! My DMs are open.
+            <br>
+            <br>
+            <a href="mailto:soumdatta81@gmail.com"> <img src="email_icon.png"></a
+               >
+               <a href="https://twitter.com/somstwt"> <img src="twitter_icon.png"></a
+                  >
+         </p>
+      </section>
+
    </body>
 </html>
