added the last changes

--- a/first.html
+++ b/first.html
@@ -13,24 +13,13 @@
          <div class="typewriter">
             <h1>Hi, I'm Som</h1>
          </div>
-         <h3>Software Developer & Creator</h3>
-         <!-- <a
-            href="https://twitter.com/somstwt?ref_src=twsrc%5Etfw"
-            class="twitter-follow-button"
-            data-show-count="false"
-            >Twitter</a>
-         <script
-            async
-            src="https://platform.twitter.com/widgets.js"
-            charset="utf-8"
-            class="tweet-button"
-         ></script> -->
 
-         <a href="https://twitter.com/somstwt"> <img src="icon2.png"></a
-            >
-            <a href="https://github.com/soumdatta81"> <img src="icon1.png"></a
-               >
-         
+         <h3>Junior BackEnd Developer & Creator</h3>
+         <div class="wrapper">
+         <a href="https://twitter.com/somstwt"> <img src="icon2.png"></a>
+         <a href="https://github.com/soumdatta81"> <img src="icon1.png"></a>
+         <a href="https://www.linkedin.com/in/somdatta81/"> <img sizes="10px" src="https://img.icons8.com/fluency/200/null/linkedin-circled.png"/></a>
+         </div>
       </section>
 
       <section class="down info-section">
@@ -49,10 +38,7 @@
       <section class="info-section">
          <h2>Projects</h2>
          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
-            officia molestias ut rem repellendus quae quia, laudantium unde ea
-            nulla facilis provident atque perspiciatis commodi labore eligendi,
-            omnis modi quaerat?
+            Currently, working and will be adding soon...
          </p>
       </section>
       <section class="info-section">
